# libiqrf

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in  iqrf.c  iqrf.h  libiqrf.pc.in  spi.c  spi.h  usb.c  usb.h
src/: CMakeLists.txt  debug.h  iqrf-dev.h  iqrf.c  iqrf.h  spi.c  spi.h  usb.c  usb.h
