AC_INIT(iqrf.c)
AM_INIT_AUTOMAKE(libiqrf,0.0.1)
AM_PROG_LIBTOOL


AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_MACRO_DIR([m4])

AC_LANG_C
AC_PROG_CC
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_CHECK_HEADERS(usb.h,,AC_MSG_ERROR([
required header file missing]))

#AC_CHECK_FUNCS(gethostbyname socket htons connect shutdown,,AC_MSG_ERROR([
#required standard library function missing]))

AC_OUTPUT(Makefile)
